<resources>
    <string name="app_name">Constructor Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="transactions">Transactions</string>
    <string name="live_chat">Live chat</string>
    <string name="watch_history">Watch history</string>
    <string name="products">Products</string>
    <string name="constructor_hub">Constructor Hub</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="website">Website</string>
    <string name="feedback">Feedback</string>
    <string name="supplier_mode">Supplier Mode</string>
    <string name="buyer_mode">Buyer Mode</string>
    <string name="posted_products">Posted products</string>
    <string name="provider1">Service</string>
    <string name="provider2">Product</string>
    <string name="add_new_product">Post new product</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="address">Address</string>
    <string name="todo">TODO</string>
    <string name="heading">Heading</string>
    <string name="company_name">Company name</string>
    <string name="full_description">Full description....</string>
    <string name="upload_images">Upload Images</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="service">Service</string>
    <string name="price">Price</string>
    <string name="name">  Name</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">Hello</string>
    <string name="my_chat_list">My Chat List</string>
    <string name="send_message">Send Message</string>

</resources>
