<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/switch_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out_24dp"
            android:title="@string/log_out" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_web"
                android:icon="@drawable/ic_web_24dp"
                android:title="@string/website" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_24dp"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
