<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    android:elevation="10dp"
    app:cardElevation="8dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardBackgroundColor="@color/WhiteSmoke"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:id="@+id/postProductLinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"

        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/chatListImageId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/seller"
            app:civ_border_color="@color/colorPrimary"
            android:padding="5dp"
            android:layout_weight="1"
            app:civ_border_width="2dp"
            android:background="@color/WhiteSmoke"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/AntiqueWhite"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="3"
            android:background="@color/White"
            >
            <TextView
                android:id="@+id/chatListPersonNameId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:textColor="@color/Black"
                android:hint="@string/name"
                android:padding="1dp"
                android:gravity="start|center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:ignore="NestedWeights" />
            <TextView
                android:id="@+id/chatListHeadingId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:gravity="start|center_vertical"
                android:hint="@string/heading"
                android:padding="1dp"
                android:textColor="@color/White"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                />

            <TextView
                android:id="@+id/chatListPriceId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:hint="@string/price"
                android:padding="3dp"
                android:textColor="@color/Black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>