<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_teal_50"
    android:clickable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".seller.sellerModeActivity"
    tools:showIn="@layout/app_bar_main2"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/add_new_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:onClick="add_new_product"
                android:elevation="8dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:padding="5dp"
                app:cardBackgroundColor="@color/md_green_400"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                tools:targetApi="lollipop">


                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="15dp"
                    android:src="@drawable/add_new_product"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="35dp"
                    android:text="Post a product"
                    android:textColor="@color/White"
                    android:textSize="35sp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="2">

            <android.support.v7.widget.CardView

                android:id="@+id/watch_history"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:onClick="posted_prducts"
                android:elevation="8dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:padding="5dp"
                app:cardBackgroundColor="@color/md_blue_300"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                tools:targetApi="lollipop">


                <ImageView
                    android:id="@+id/watch_history_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="20dp"
                    android:src="@drawable/posted_products"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/watch_history_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:layout_toEndOf="@+id/watch_history_icon"
                    android:layout_toRightOf="@+id/watch_history_icon"
                    android:padding="10dp"
                    android:text="Posted products"
                    android:textColor="#fffaf0"
                    android:textSize="32sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/transaction"
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:onClick="sup_transaction"
                android:elevation="8dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:padding="5dp"
                app:cardBackgroundColor="@color/md_red_400"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/transaction_icon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"
                    android:padding="15dp"
                    android:src="@drawable/sup_transactions"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/transaction_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_toEndOf="@+id/transaction_icon"
                    android:layout_toRightOf="@+id/transaction_icon"
                    android:text="@string/transactions"
                    android:textColor="#fffaf0"
                    android:textSize="33sp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="2">

            <android.support.v7.widget.CardView

                android:id="@+id/order_list"
                android:layout_width="190dp"
                android:layout_height="220dp"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:onClick="sup_orders"
                android:elevation="8dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:padding="5dp"
                app:cardBackgroundColor="@color/md_amber_400"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                tools:targetApi="lollipop">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="20dp"
                    android:src="@drawable/order"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/orders"
                    android:textColor="@color/White"
                    android:textSize="35sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/live_chat"
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:onClick="sup_chat"
                android:elevation="8dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:padding="5dp"
                app:cardBackgroundColor="@color/MediumAquamarine"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"
                    android:padding="15dp"
                    android:src="@drawable/live_chat"
                    android:focusable="true"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/live_chat"
                    android:textColor="@color/White"
                    android:textSize="33sp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>